# learning

./: .gitignore  README.md
.idx/: dev.nix
cli/rust/: grrs
dreamberd/: README.md
nix/: README.md  pythonShell.nix
nix/pkg/: flake.nix  test.nix
rust/: .gitignore  README.md
rust/file_explorer/: Cargo.toml  run
rust/file_explorer/src/: debug.rs  error.rs  files.rs  handle.rs  input.rs  main.rs  run.rs  term.rs  todo.md
rust/grrs/: Cargo.toml  mktestfile
rust/grrs/src/: arg_parser.rs  color.rs  lib.rs  main.rs
rust/grrs/src/color/: mod.rs
rust/guessing_game/src/: main.rs
rust/hello_world/: run
rust/raw_mode_testing/: Cargo.toml
rust/raw_mode_testing/src/: debug.rs  handle.rs  main.rs  run.rs
rust/rust_cli/: Cargo.toml
rust/rust_cli/src/: main.rs
rust/school--ascii_thing/: Cargo.toml
rust/school--ascii_thing/src/: main.rs
rust/tauri-app/: bun.lockb
rust/timetables/: Cargo.toml
rust/timetables/src/: main.rs
rust/weather_fetch/: Cargo.toml
rust/weather_fetch/src/: color.rs  lib.rs  main.rs
rust/webscraper/: Cargo.toml
rust/webscraper--it_no_work/src/: lib.rs  scraper.rs  weather.rs
rust/webscraper/src/: lib.rs  main.rs  scraper.rs  weather.rs
testfiles/grrs/: mktestfile
